# rasberry_hri

./: .gitignore  CMakeLists.txt  db2table.py  delete.py  lcas_hri.pracmln  log_extractor.py  package.xml  scenarios  setup.py  shorten_rosbags.py  transform.py
launch/: auto_any_camera.launch  auto_d415.launch  auto_d435.launch  d415_2_cameras.launch  d415_camera.launch  demo.launch  experiment.launch  extraction.launch  hri_agent.launch  openpose.launch  picker_mover.launch
msg/: Action.msg  Classification.msg  Command.msg  Criterium.msg  Joint.msg  Joints.msg  Log.msg  Pose.msg
scripts/: action_recognition_node  classifiers.py  converter.py  display_node  experimenter_node  lcas_bdi.db  lcas_bdi.mln  picker_mover_node  player_node  pose_model.py  poses.py  recorder_node  robot_control_node  scheduler_node  skeleton_comparator  skeleton_comparator_node  skeleton_converter  skeleton_converter_node  skeleton_extractor  skeleton_extractor.py  skeleton_extractor_node  skeleton_logger_node  skeleton_stabilizer  skeleton_stabilizer_node
scripts/pracmln/mln/: base.py  mrf.py
scripts/pracmln/mln/inference/: infer.py
src/: experiment.py  experiment_config.py  inference_test.py  log_extractor.py  parameters.py  reasoning_experiment.py  utils.py
src/bdi/: actions.py  bdi_system.py  goals.py  intention_recognition.py  knowledge_base.py  lcas_bdi.db  lcas_bdi.mln  robot_control.py  sanity.py  scheduler.py  test.py  world_state.py
src/commands4movebase/: commands_executer.py
src/common/: parameters.py  utils.py
src/experiments/: cla_exp.py  config.py  db.py  experiment.py  experimenter.py  log_splitter.py  log_writer.py  play_record.py
src/not_used/: config.py  lcas_bdi.db  lcas_bdi.mln  sanity.py  scenarios  skeleton_comparator.py  skeleton_converter.py  skeleton_extractor.py  skeleton_stabilizer.py  test.py
src/not_used/probcog/: new-1.blnl
src/not_used/probcog/MLN/: util.py
src/not_used/probcog/MLN/grounding/: bpll.py  wcsp.py
src/not_used/probcog/MLN/inference/: IPFPM.py
src/not_used/probcog/MLN/learning/: BPLL.py  Learner.py  softeval.py
src/not_used/robco/: commandMoveBase.py
src/predicates/: predicates.py
src/probcog/MLN/: MarkovLogicNetwork.py  __init__.py  util.py
src/probcog/MLN/grounding/: DefaultGrounding.py  bpll.py  wcsp.py
src/probcog/MLN/inference/: IPFPM.py  Inference.py
src/probcog/MLN/learning/: AbstractLearner.py  PLL.py  softeval.py
src/robco/: commandCoordinator.py  commandExecuter.py  commandInterface.py  commandTopological.py  commandVelocity.py  commandsExecuter.py  safe_actions.py
src/skeleton_pipeline/: action_recognition.py  classifiers.py  converter.py  filter.py  openpose.py  poses.py  skeleton_comparator.py  skeleton_converter.py  skeleton_extractor.py  skeleton_logger.py  utils.py
src/utilities/logging/: confusion.py  db2table.py  delete.py  log_splitter.py  transform.py
src/utilities/prototyping/: inference_test.py  noise_test.py
src/utilities/rosbag/: data_extractor.py  splitter.py
